# metalearn-server

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
src/adapters/claude_code/: SKILL.md
src/adapters/cli/: main.py
src/adapters/http_api/: auth.py  dependencies.py  schemas.py  server.py
src/adapters/openai/: tools.py
src/engine/core/: fake_detection.py  indicators.py  sm2.py
src/engine/db/: dao_api_key.py  dao_assessment.py  dao_journal.py  dao_node.py  dao_review.py  dao_track.py  dao_user.py  database.py  migrate_from_json.py  schema.sql
src/engine/scheduler/: multi_track.py
src/engine/workflow/: state_machine.py
src/knowledge/: index_data.json  indexing.py  retrieval.py
src/knowledge/core/: assessment.md  diagnosis.md  practice.md  teaching.md
src/knowledge/examples/: diagnosis-interview.md  fake-detection-dialogue.md  feynman-session.md  multi-session-workflow.md  spaced-repetition-session.md
src/knowledge/methods/: README.md  active-recall.md  chunking.md  citation-network.md  dual-coding.md  elaborative-interrogation.md  feynman.md  focus-diffuse.md  interleaving.md  multi-ai-cross-exam.md  spaced-repetition.md
src/knowledge/references/: assessment-protocols.md  cross-discipline.md  data-persistence.md  fake-detection.md  learning-indicators.md  (+1 more)
tests/: conftest.py  test_api_key.py  test_dao_assessment_journal.py  test_dao_node.py  test_dao_review.py  test_dao_track.py  test_dao_user.py  test_fake_detection.py  test_http_api.py  test_scheduler.py  test_sm2.py  test_state_machine.py
(+14 files in other folders)
